--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,13 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   sqflite: ^2.4.2
   pedometer: ^4.1.1
+
+  # Auth & State Management
+  get: ^4.7.2
+  get_storage: ^2.1.1
+  dio: ^5.9.0
+  google_fonts: ^6.3.0
+  url_launcher: ^6.3.1
 #  device_info_plus: ^12.2.0
 #  flutter_local_notifications: ^19.5.0
 #  flutter_background_service: ^5.1.0
@@ -70,9 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/logos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
