--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:label="bg_service"
+        android:label="FestPlay"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
