--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   dio: ^5.9.0
   google_fonts: ^6.3.0
   url_launcher: ^6.3.1
+  intl: ^0.20.2
 #  device_info_plus: ^12.2.0
 #  flutter_local_notifications: ^19.5.0
 #  flutter_background_service: ^5.1.0
