--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,11 @@ dependencies:
   google_fonts: ^6.3.0
   url_launcher: ^6.3.1
   intl: ^0.20.2
+
+  # Force Update
+  in_app_update: ^4.2.3
+  package_info_plus: ^8.3.0
+  version: ^3.0.2
 #  device_info_plus: ^12.2.0
 #  flutter_local_notifications: ^19.5.0
 #  flutter_background_service: ^5.1.0
